--- a/index.html
+++ b/index.html
@@ -19,6 +19,6 @@
     <!-- <h1>PWA切り替え用ページ（トップページ）です</h1>
     <a href="https://pwa0913.herokuapp.com/2020/">2020</a> -->
     <h1>PWAです</h1>
-    <a href="https://pwa0913.herokuapp.com/app/test.html">キャッシュテスト</a>
+    <a href="https://sy-eggplant.github.io/app/test.html">キャッシュテスト</a>
   </body>
 </html>
