--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
       // service workerが有効なら、service-worker.js を登録します
       if ('serviceWorker' in navigator) {
         navigator.serviceWorker.register('./service-worker.js').then(function() {console.log('Service Worker 1 Registered')});
+        const channel = new MessageChannel();
+        navigator.serviceWorker.controller.postMessage('update', [channel.port2]);
       }
+      
     </script>
     <meta http-equiv="content-type" charset="utf-8">
     <title>indexページ</title>
