--- a/index.html
+++ b/index.html
@@ -8,12 +8,21 @@
       } 
       setInterval(superReload, 10000);
       // service workerが有効なら、service-worker.js を登録します
-      if ('serviceWorker' in navigator) {
-        navigator.serviceWorker.register('./service-worker.js').then(function() {console.log('Service Worker 1 Registered')});
-        const channel = new MessageChannel();
-        navigator.serviceWorker.controller.postMessage('update', [channel.port2]);
-      }
       
+if ('serviceWorker' in navigator) {
+  navigator.serviceWorker
+    .register('./service-worker.js')
+    .then(registration => {
+      // 登録成功
+      registration.onupdatefound = function() {
+        console.log('アップデートがあります！');
+        registration.update();
+      }
+    })
+    .catch(err => {
+      // 登録失敗
+  });
+}
     </script>
     <meta http-equiv="content-type" charset="utf-8">
     <title>indexページ</title>
